fixed z-index of hamburger pop-up

--- a/Website/styles/style.css
+++ b/Website/styles/style.css
@@ -51,13 +51,13 @@ nav {
 
 .hamburger .bar {
     /*hamburger icon*/
+    display: block;
+    margin: 5px 0;
     width: 30px;
     height: 3px;
     background-color: #fff;
     /*hamburger icon*/
 
-    display: block;
-    margin: 5px 0;
     transition: all 0.2s ease-in-out; /*animation*/
 }
 
@@ -88,7 +88,7 @@ nav {
     transition: all 0.4s ease-in-out;
 
     display: grid;
-    row-gap: 1rem;
+    row-gap: 1.5rem;
 }
 
 .nav-main.active {
@@ -125,6 +125,8 @@ header {
     height: 30rem; /*image size*/
     background-size: cover; /*only use 1 image*/
     background-position: center; /*center the image*/
+
+    z-index: -1;
 }
 
 .header-text {
